--- a/Botao-Admin.html
+++ b/Botao-Admin.html
@@ -193,8 +193,8 @@
 
     <div id="modal-status-funcionamento" class="modal-overlay" onclick="fecharModalStatus()">
         <div class="modal-content" onclick="event.stopPropagation()">
-            <h2 style="margin: 0; color: var(--warning);">STATUS DA LOJA</h2>
-            <p style="font-size: 12px; color: var(--text-muted); margin-bottom: 20px;">ATUALIZAR HORÁRIO NA PLANILHA</p>
+            <h2 style="margin: 0; color: var(--warning);">STATUS: Aberto/Fechado</h2>
+            <p style="font-size: 12px; color: var(--text-muted); margin-bottom: 20px;">ATUALIZAR HORÁRIO</p>
             
             <div class="form-group">
                 <label>ID DE STATUS (FIXO)</label>
