--- a/Botao-Admin.html
+++ b/Botao-Admin.html
@@ -213,11 +213,11 @@
             </div>
 
             <div class="form-group">
-                <label>HORÁRIO DE FUNCIONAMENTO (GERADO)</label>
+                <label>HORÁRIO de funcionamento que irá Funcionar 👇</label>
                 <input type="text" id="status-horario" placeholder="(Aberto: 18:00)(Fechado: 22:00)">
             </div>
 
-            <button class="btn" style="background: var(--warning); color: #000; margin-top: 20px;" onclick="enviarStatusPlanilha()">ENVIAR STATUS PARA PLANILHA</button>
+            <button class="btn" style="background: var(--warning); color: #000; margin-top: 20px;" onclick="enviarStatusPlanilha()">ATUALIZAR HORÁRIO</button>
             <button class="btn btn-util" style="margin-top: 10px;" onclick="fecharModalStatus()">CANCELAR</button>
         </div>
     </div>
