--- a/index.html
+++ b/index.html
@@ -359,6 +359,10 @@
 
 <div id="main-app" class="main-wrapper">
     <header class="top-bar">
+        <a href="index.html">
+  <img src="caminho/para/sua/logo-albatroz.png" alt="Logo Albatroz" width="150">
+        </a>
+        
         <div class="logo-area">
             <h2>NUANCE <span style="font-weight: 300; font-size: 14px; color: var(--text-muted); text-transform: uppercase; letter-spacing: 2px; margin-left: 10px;">2.1</span></h2>
         </div>
