--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 <div id="main-app" class="main-wrapper">
     <header class="top-bar">
         <a href="index.html">
-  <img src="caminho/para/sua/logo-albatroz.png" alt="Logo Albatroz" width="150">
+  <img src="IMG_Albatroz.png" alt="Logo Albatroz" width="150">
         </a>
         
         <div class="logo-area">
