--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+2
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -375,7 +375,13 @@
             <button class="btn btn-nav" style="border-color: var(--primary);" onclick="abrirRankingProdutos()">📦 Estoque</button>
             <button class="btn btn-nav" style="background: #334155; border: none;" onclick="limparHD()">💾 Limpar HD</button>
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
-          
+
+
+            <a href="Nuance-mesa.html"
+            class="btn btn-nav" style="border: none; text-decoration: none;">
+            🚨MESAS🚨
+            </a>         
+            
             <a href="Botao-Admin.html"
             class="btn btn-nav" style="border: none; text-decoration: none;">
             🧑‍💻 Admin 🧑‍💻
