--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-2
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -377,7 +377,7 @@
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
 
 
-            <a href="Nuance-mesa.html"
+            <a href="T.html"
             class="btn btn-nav" style="border: none; text-decoration: none;">
             🚨MESAS🚨
             </a>         
