--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <button class="btn btn-nav" style="background: var(--danger); border: none;" onclick="logout()">🚪 Sair</button>
 
 
-            <a href="T.html"
+            <a href="Controle-Mesa.html"
             class="btn btn-nav" style="border: none; text-decoration: none;">
             🚨MESAS🚨
             </a>         
