Fix typo in anchor tag href attribute

--- a/Controle-Mesa.html
+++ b/Controle-Mesa.html
@@ -209,8 +209,11 @@
         <div class="modal-content">
             <h2 id="modalTitle">Card ID: 0</h2>
             <p style="margin-bottom: 30px; opacity: 0.7;">Acesso autorizado ao módulo de dados futurista.</p>
-            <a herf="NUANCE-Cozinha.html">
-            <button class="action-btn">Executar Protocolo</button></a>
+           
+            <a href="NUANCE-Cozinha.html">
+            <button class="action-btn">Executar Protocolo</button>
+            </a>
+            
             <span class="close-btn" onclick="closeModal()">Fechar interface</span>
         </div>
     </div>
