Change primary neon color from blue to red

--- a/Controle-Mesa.html
+++ b/Controle-Mesa.html
@@ -7,7 +7,7 @@
     <title>Futuristic Dashboard</title>
     <style>
         :root {
-            --primary-neon: #00f2ff;
+            --primary-neon: #FF0000;
             --secondary-neon: #7000ff;
             --bg-dark: #050505;
             --glass: rgba(255, 255, 255, 0.1);
